--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <meta name="author" content="Jophini PM">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L4QBBNX1WW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L4QBBNX1WW');
+</script>
 </head>
 <body>
     <!-- Navigation -->
