--- a/index.html
+++ b/index.html
@@ -153,13 +153,23 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">🛡️</div>
+                    <!-- <div class="project-image">🛡️</div>
                     <div class="project-content">
                         <h3>AI-Powered Cybersecurity Threat Detection</h3>
                         <p>Built an ML model using <strong>Python, Scikit-learn, TensorFlow, and Pandas</strong> to detect phishing, malware, and unauthorized access. Implemented advanced algorithms for real-time threat identification.</p>
                         <a href="https://github.com/jophini-pm/AI-Powered-Cybersecurity-Threat-Detection" target="_blank" class="project-link">View Project →</a>
                     </div>
-                </div>
+               </div> --> 
+                <div class="project-card">
+    <div class="project-image">
+        <img src="images/projects/cybersecurity.png" alt="AI-Powered Cybersecurity Threat Detection">
+    </div>
+    <div class="project-content">
+        <h3>AI-Powered Cybersecurity Threat Detection</h3>
+        <p>Built an ML model using <strong>Python, Scikit-learn, TensorFlow, and Pandas</strong> to detect phishing, malware, and unauthorized access. Implemented advanced algorithms for real-time threat identification.</p>
+        <a href="https://github.com/jophini-pm/AI-Powered-Cybersecurity-Threat-Detection" target="_blank" class="project-link">View Project →</a>
+    </div>
+</div>
                 <!--<div class="project-card">
                     <div class="project-image">🏥</div>
                     <div class="project-content">
